chore: update to work with Java 23